<resources>
    <string name="app_name">ApputviklingMappe3</string>
    <string name="titleMaps">OsloMet Maze Helper</string>
    <string name="titleList">Liste over hus</string>
    <string name="titleEditHus">Endre hus</string>
    <string name="titleLeggTil">Legg til hus</string>
    <string name="titleOptions">Valg</string>
    <string name="hintBeskrivelse">Skriv beskrivelse</string>
    <string name="hintGateadresse">Ingen addresse valgt</string>
    <string name="hintLatitude">Skriv inn latitude</string>
    <string name="hintLongitude">Skriv inn longitude</string>
    <string name="btnLeggTil">Legg til</string>
    <string name="btnEndre">Endre</string>
    <string name="btnSlett">Slett</string>
    <string name="btnAvbryt">Avbryt</string>
    <string name="btnVelgAddresse">Velg addresse</string>
    <string name="btnEndreAddresse">Endre addresse</string>
    <string name="information">Hva vil du gjøre med huset?</string>
    <string name="listId">Id: </string>
    <string name="listBeskrivelse">Beskrivelse: </string>
    <string name="listEtasjer">Etasjer: </string>
    <string-array name="etasjer">
        <item>Velg antall Etasjer</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>